--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -45,6 +45,7 @@
 .name img {    
     margin-left:20px;
     width: 40px;
+    margin-bottom: 0.2em;
     
 }
 
@@ -65,6 +66,4 @@
 
 // injector
 // endinjector
-
-
 
