--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar  role="navigation" ng-controller="NavbarCtrl">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#/"><img src="assets/images/brocade.png" /><span class="ssc_logo">StealApp Service Controller</span></a></h1>
+      <h1><a href="#/"><img src="assets/images/brocade.png" /><span class="ssc_logo">SteelApp Service Controller</span></a></h1>
     </li>
     <li class="toggle-topbar menu-icon"><a ng-href="#"><span>Menu</span></a></li>
   </ul>
