--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="top-bar" data-topbar  role="navigation" ng-controller="NavbarCtrl">
+<!--<nav class="top-bar" data-topbar  role="navigation" ng-controller="NavbarCtrl">
   <ul class="title-area">
     <li class="name">
       <h1><a href="#/"><img src="assets/images/brocade.png" /><span class="ssc_logo">SteelApp Service Controller</span></a></h1>
@@ -16,10 +16,10 @@
       </li>
     </ul>    
   </section>
-</nav>
+</nav>-->
 <ul class="breadcrumbs">
   <li><a href="#">Home</a></li>
-  <li><a href="#">Dashboard</a></li>
-  <li class="unavailable"><a href="#">Testing</a></li>
-  <li class="current"><a href="#">Page1</a></li>
+  <li><a href="#">Features</a></li>
+  <li class="unavailable"><a href="#">Gene Splicing</a></li>
+  <li class="current"><a href="#">Cloning</a></li>
 </ul>
