--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,4 +1,4 @@
-<nav class="top-bar" data-topbar  role="navigation" ng-controller="NavbarCtrl">
+<nav class="top-bar" data-topbar  role="navigation" ng-controller="HeaderCtrl">
   <ul class="title-area">
     <li class="name">
       <h1><a href="#/"><img src="assets/images/brocade.png" /><span class="ssc_logo">SteelApp Service Controller</span></a></h1>
